--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.1",
+    "@react-navigation/material-bottom-tabs": "^5.3.9",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "expo": "~39.0.2",
+    "expo-camera": "^9.0.0",
+    "expo-image-picker": "~9.1.1",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
+    "image-picker": "^0.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-screens": "^2.14.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux-thunk": "^2.3.0"
