--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "prettier": "2.2.0"
   },
   "private": true
 }
